# android_external_camera_engine_rkaiq

./: .gitattributes  .gitmodules  Android.bp  CMakeLists.txt  RkAiqCamGroupManager.cpp  RkAiqCamGroupManager.h  RkAiqManager.cpp  RkAiqManager.h  RkAiqVersion.h  rkaiq.go  rkaiq_getAlgosLib.go  rkaiq_getAlgosMacros.go  rkaiq_getSrcsFiles.go  rkaiq_getStaticLibSrcs.go  rkaiq_switchs.go
IspFec/: CMakeLists.txt
aiq_core/: IRkAiqResourceTranslator.h  MessageBus.h  RkAiqAnalyzeGroupManager.cpp  RkAiqAnalyzeGroupManager.h  RkAiqCamGroupHandleInt.h  RkAiqCamgroupHandle.cpp  RkAiqCore.cpp  RkAiqCore.h  RkAiqCoreConfig.h  RkAiqCoreConfigV21.h  RkAiqCoreConfigV30.h  RkAiqCoreConfigV32.h  RkAiqCoreV21.cpp  RkAiqCoreV3x.cpp  RkAiqCoreV3x.h  RkAiqHandle.cpp  RkAiqHandle.h  RkAiqHandleInt.cpp  RkAiqHandleInt.h  RkAiqHandleIntV21.cpp  RkAiqHandleIntV21.h  RkAiqHandleIntV3x.cpp  RkAiqHandleIntV3x.h  RkAiqResourceTranslator.cpp  RkAiqResourceTranslatorV21.cpp  RkAiqResourceTranslatorV32.cpp  RkAiqResourceTranslatorV3x.cpp  RkAiqResourceTranslatorV3x.h  RkAiqSharedDataManager.h  RkLumaCore.cpp  RkLumaCore.h
algos/: Android.bp  CMakeLists.txt  interpolation.cpp  interpolation.h  rk_aiq_algo_des.h  rk_aiq_algo_types.h  rk_aiq_algo_types_int.h  rk_aiq_luma.h
algos/acsm/: CMakeLists.txt  rk_aiq_algo_acsm_itf.cpp
algos_camgroup/: Android.bp  CMakeLists.txt
cmake/: BuildOptions.cmake  CheckGlibc.cmake  CompileOptions.cmake  Findlibdrm.cmake  rkaiq_config.h.in
common/: common.h  list.h  rk_aiq.h  rk_aiq_comm.h  rk_aiq_pool.h  rk_aiq_types.h  rk_aiq_types_priv.h
hal_interface2.0/: Android.mk
hwi/: CamHwBase.cpp  CamHwBase.h  FlashLight.cpp  FlashLight.h  ICamHw.h  IspParamsSplitter.cpp  IspParamsSplitter.h  LensHw.cpp  LensHw.h  SensorHw.cpp  SensorHw.h
include/: rk_aiq_user_api_agic.h
ipc_server/: MessageParser.cpp  MessageParser.hpp  socket_server.cpp
iq_files/: imx347.xml
iq_parser/: RkAiqCalibApi.cpp  RkAiqCalibApi.h  RkAiqCalibDb.cpp  RkAiqCalibDb.h  RkAiqCalibDbTypes.h  RkAiqCalibParser.cpp  RkAiqCalibParser.h  RkAiqCalibTag.cpp  RkAiqCalibTag.h  RkAiqCalibVersion.h  calibtags.h  tinyxml2.cpp  xmltags.cpp  xmltags.h
iq_parser_v2/: CMakeLists.txt  RkAiqCalibDbV2.cpp
iqfiles/: gc2053_CMK-OT1726-PG1_29IR-2MP-F25.xml  gc2053_YT-RV1109-2-V1_40IR-2MP-F20.xml  gc2053_YT-RV1109-2-V1_YT8009.xml  gc2093_BFC105-DUAL-L_IR.xml  gc2093_BFC105-DUAL-L_IRC.xml  gc2093_YT-RV1109-2-V1_40IR-2MP-F20.xml  gc2385_HS5885-BNSM1018-V01_default.xml  gc4c33_PCORW0009A_40IRC-4M.xml  gc4c33_PCORW0009A_4mm-4M.xml  imx307_CMK-OT0837-PT2_YT-2929.xml  imx307_CMK-OT0837-PT2_YT-2929_UNV-40IRC-2M-F20.xml  imx334_CMK-OT1522-FG3_CS-P1150-IRC-8M-FAU.xml  imx347.xml  (+48 more)
rk_stream/: CMakeLists.txt
rk_stream/include/: RkRawStreamVerison.h  rk_vi_user_api2_stream_cfg.h
rk_stream/stream_cfg/: MediaInfo.cpp  MediaInfo.h  RawStreamCapUnit.cpp  RawStreamCapUnit.h  RawStreamProcUnit.cpp  RawStreamProcUnit.h  Stream.cpp  Stream.h  rk_vi_user_api_stream_cfg.cpp
(+820 files in other folders)
